compiladores/miniPas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    AMPERSANT
    ARCTAN
    CASE
    CHR
    CLOSECOMMENT
    CLOSECOMMENT2
    COMMENT
    COS
    DISPOSE
    DIVIDE
    DOWNTO
    EOF
    EOLN
    EXP
    FALSE
    FILE
    FOR
    GET
    GOTO
    HASHTAG
    IN
    INPUT
    LABEL
    LN
    MAXINT
    MOD
    NEW
    NIL
    ODD
    OPENCOMMENT
    OPENCOMMENT2
    ORD
    OUTPUT
    PACK
    PACKED
    PAGE
    PRED
    PUT
    READLN
    REAL
    RECORD
    REPEAT
    RESET
    REWRITE
    ROUND
    SET
    SIMPLE
    SIN
    SQR
    SQRT
    SUCC
    TEXT
    TO
    TRUE
    TRUNC
    TYPE
    UNPACK
    UNTIL
    WITH
    WRITELN

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block
Rule 2     block -> variable_declaration_part procedure_declaration_part statement_part
Rule 3     variable_declaration_part -> empty
Rule 4     variable_declaration_part -> VAR variable_declaration SEMICOLON variable_declaration_part
Rule 5     variable_declaration_part -> CONST const_declaration SEMICOLON variable_declaration_part
Rule 6     variable_declaration -> ID variable_declaration2 COLON type
Rule 7     variable_declaration2 -> COMMA ID variable_declaration2
Rule 8     variable_declaration2 -> empty
Rule 9     const_declaration -> ID EQUAL NUMBER
Rule 10    const_declaration -> ID EQUAL STRING
Rule 11    type -> simple_type
Rule 12    type -> array_type
Rule 13    array_type -> ARRAY LBRACKET index_range RBRACKET OF simple_type
Rule 14    index_range -> NUMBER DOT DOT NUMBER
Rule 15    simple_type -> type_identifier
Rule 16    type_identifier -> INTEGER
Rule 17    type_identifier -> CHAR
Rule 18    type_identifier -> BOOLEAN
Rule 19    procedure_declaration_part -> empty
Rule 20    procedure_declaration_part -> procedure_declaration
Rule 21    procedure_declaration_part -> function_declaration
Rule 22    procedure_declaration -> PROCEDURE ID SEMICOLON block
Rule 23    function_declaration -> FUNCTION ID LPAREN variable_declaration RPAREN COLON type SEMICOLON variable_declaration_part
Rule 24    call_function -> ID LPAREN args RPAREN SEMICOLON
Rule 25    args -> args args2
Rule 26    args -> empty
Rule 27    args2 -> empty
Rule 28    args2 -> COMMA args
Rule 29    args2 -> NUMBER COMMA args
Rule 30    args2 -> STRING args
Rule 31    args2 -> ID
Rule 32    args2 -> NUMBER
Rule 33    args2 -> STRING
Rule 34    statement_part -> compound_statement
Rule 35    compound_statement -> BEGIN statement END DOT compound_statement2
Rule 36    compound_statement2 -> empty
Rule 37    compound_statement2 -> compound_statement
Rule 38    statement -> simple_statement
Rule 39    statement -> statement simple_statement
Rule 40    statement -> statement structured_statement
Rule 41    statement -> structured_statement
Rule 42    statement3 -> SEMICOLON statement
Rule 43    statement3 -> empty
Rule 44    simple_statement -> assignment_statement
Rule 45    simple_statement -> procedure_statement
Rule 46    simple_statement -> read_statement
Rule 47    simple_statement -> write_statement
Rule 48    simple_statement -> call_function
Rule 49    assignment_statement -> variable COLON EQUAL expression SEMICOLON
Rule 50    procedure_statement -> procedure_identifier
Rule 51    procedure_identifier -> ID
Rule 52    read_statement -> READ LPAREN input_variable input_variable2 RPAREN SEMICOLON
Rule 53    input_variable -> variable
Rule 54    input_variable2 -> empty
Rule 55    input_variable2 -> COMMA variable
Rule 56    write_statement -> WRITE LPAREN output_value output_value2 RPAREN SEMICOLON
Rule 57    output_value -> expression
Rule 58    output_value -> STRING
Rule 59    output_value2 -> empty
Rule 60    output_value2 -> COMMA expression
Rule 61    structured_statement -> compound_statement
Rule 62    structured_statement -> if_statement
Rule 63    structured_statement -> while_statement
Rule 64    if_statement -> IF LPAREN expression RPAREN THEN statement
Rule 65    if_statement -> IF LPAREN expression RPAREN THEN statement ELSE statement
Rule 66    while_statement -> WHILE expression DO statement
Rule 67    while_statement -> WHILE expression DO BEGIN statement END SEMICOLON
Rule 68    expression -> simple_expression
Rule 69    expression -> simple_expression relational_operator simple_expression
Rule 70    simple_expression -> sign term simple_expression2
Rule 71    simple_expression2 -> adding_operator term
Rule 72    simple_expression2 -> empty
Rule 73    term -> factor term2
Rule 74    term2 -> multiplying_operator factor
Rule 75    term2 -> empty
Rule 76    factor -> variable
Rule 77    factor -> NUMBER
Rule 78    factor -> LPAREN expression RPAREN
Rule 79    factor -> NOT factor
Rule 80    relational_operator -> EQUAL
Rule 81    relational_operator -> DISTINT
Rule 82    relational_operator -> LESS
Rule 83    relational_operator -> GREATER
Rule 84    relational_operator -> GREATER EQUAL
Rule 85    relational_operator -> LESS EQUAL
Rule 86    sign -> PLUS
Rule 87    sign -> MINUS
Rule 88    sign -> empty
Rule 89    adding_operator -> PLUS
Rule 90    adding_operator -> MINUS
Rule 91    adding_operator -> OR
Rule 92    multiplying_operator -> TIMES
Rule 93    multiplying_operator -> DIV
Rule 94    multiplying_operator -> AND
Rule 95    variable -> entire_variable
Rule 96    variable -> indexed_variable
Rule 97    indexed_variable -> array_variable LBRACKET expression RBRACKET
Rule 98    array_variable -> entire_variable
Rule 99    entire_variable -> variable_identifier
Rule 100   variable_identifier -> ID
Rule 101   empty -> <empty>

Terminals, with rules where they appear

ABS                  : 
AMPERSANT            : 
AND                  : 94
ARCTAN               : 
ARRAY                : 13
BEGIN                : 35 67
BOOLEAN              : 18
CASE                 : 
CHAR                 : 17
CHR                  : 
CLOSECOMMENT         : 
CLOSECOMMENT2        : 
COLON                : 6 23 49
COMMA                : 7 28 29 55 60
COMMENT              : 
CONST                : 5
COS                  : 
DISPOSE              : 
DISTINT              : 81
DIV                  : 93
DIVIDE               : 
DO                   : 66 67
DOT                  : 14 14 35
DOWNTO               : 
ELSE                 : 65
END                  : 35 67
EOF                  : 
EOLN                 : 
EQUAL                : 9 10 49 80 84 85
EXP                  : 
FALSE                : 
FILE                 : 
FOR                  : 
FUNCTION             : 23
GET                  : 
GOTO                 : 
GREATER              : 83 84
HASHTAG              : 
ID                   : 1 6 7 9 10 22 23 24 31 51 100
IF                   : 64 65
IN                   : 
INPUT                : 
INTEGER              : 16
LABEL                : 
LBRACKET             : 13 97
LESS                 : 82 85
LN                   : 
LPAREN               : 23 24 52 56 64 65 78
MAXINT               : 
MINUS                : 87 90
MOD                  : 
NEW                  : 
NIL                  : 
NOT                  : 79
NUMBER               : 9 14 14 29 32 77
ODD                  : 
OF                   : 13
OPENCOMMENT          : 
OPENCOMMENT2         : 
OR                   : 91
ORD                  : 
OUTPUT               : 
PACK                 : 
PACKED               : 
PAGE                 : 
PLUS                 : 86 89
PRED                 : 
PROCEDURE            : 22
PROGRAM              : 1
PUT                  : 
RBRACKET             : 13 97
READ                 : 52
READLN               : 
REAL                 : 
RECORD               : 
REPEAT               : 
RESET                : 
REWRITE              : 
ROUND                : 
RPAREN               : 23 24 52 56 64 65 78
SEMICOLON            : 1 4 5 22 23 24 42 49 52 56 67
SET                  : 
SIMPLE               : 
SIN                  : 
SQR                  : 
SQRT                 : 
STRING               : 10 30 33 58
SUCC                 : 
TEXT                 : 
THEN                 : 64 65
TIMES                : 92
TO                   : 
TRUE                 : 
TRUNC                : 
TYPE                 : 
UNPACK               : 
UNTIL                : 
VAR                  : 4
WHILE                : 66 67
WITH                 : 
WRITE                : 56
WRITELN              : 
error                : 

Nonterminals, with rules where they appear

adding_operator      : 71
args                 : 24 25 28 29 30
args2                : 25
array_type           : 12
array_variable       : 97
assignment_statement : 44
block                : 1 22
call_function        : 48
compound_statement   : 34 37 61
compound_statement2  : 35
const_declaration    : 5
empty                : 3 8 19 26 27 36 43 54 59 72 75 88
entire_variable      : 95 98
expression           : 49 57 60 64 65 66 67 78 97
factor               : 73 74 79
function_declaration : 21
if_statement         : 62
index_range          : 13
indexed_variable     : 96
input_variable       : 52
input_variable2      : 52
multiplying_operator : 74
output_value         : 56
output_value2        : 56
procedure_declaration : 20
procedure_declaration_part : 2
procedure_identifier : 50
procedure_statement  : 45
program              : 0
read_statement       : 46
relational_operator  : 69
sign                 : 70
simple_expression    : 68 69 69
simple_expression2   : 70
simple_statement     : 38 39
simple_type          : 11 13
statement            : 35 39 40 42 64 65 65 66 67
statement3           : 
statement_part       : 2
structured_statement : 40 41
term                 : 70 71
term2                : 73
type                 : 6 23
type_identifier      : 15
variable             : 49 53 55 76
variable_declaration : 4 23
variable_declaration2 : 6 7
variable_declaration_part : 2 4 5 23
variable_identifier  : 99
while_statement      : 63
write_statement      : 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block
    (2) block -> . variable_declaration_part procedure_declaration_part statement_part
    (3) variable_declaration_part -> . empty
    (4) variable_declaration_part -> . VAR variable_declaration SEMICOLON variable_declaration_part
    (5) variable_declaration_part -> . CONST const_declaration SEMICOLON variable_declaration_part
    (101) empty -> .

    VAR             shift and go to state 8
    CONST           shift and go to state 9
    PROCEDURE       reduce using rule 101 (empty -> .)
    FUNCTION        reduce using rule 101 (empty -> .)
    BEGIN           reduce using rule 101 (empty -> .)

    block                          shift and go to state 5
    variable_declaration_part      shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON block .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block .)


state 6

    (2) block -> variable_declaration_part . procedure_declaration_part statement_part
    (19) procedure_declaration_part -> . empty
    (20) procedure_declaration_part -> . procedure_declaration
    (21) procedure_declaration_part -> . function_declaration
    (101) empty -> .
    (22) procedure_declaration -> . PROCEDURE ID SEMICOLON block
    (23) function_declaration -> . FUNCTION ID LPAREN variable_declaration RPAREN COLON type SEMICOLON variable_declaration_part

    BEGIN           reduce using rule 101 (empty -> .)
    PROCEDURE       shift and go to state 14
    FUNCTION        shift and go to state 15

    procedure_declaration_part     shift and go to state 10
    empty                          shift and go to state 11
    procedure_declaration          shift and go to state 12
    function_declaration           shift and go to state 13

state 7

    (3) variable_declaration_part -> empty .

    PROCEDURE       reduce using rule 3 (variable_declaration_part -> empty .)
    FUNCTION        reduce using rule 3 (variable_declaration_part -> empty .)
    BEGIN           reduce using rule 3 (variable_declaration_part -> empty .)


state 8

    (4) variable_declaration_part -> VAR . variable_declaration SEMICOLON variable_declaration_part
    (6) variable_declaration -> . ID variable_declaration2 COLON type

    ID              shift and go to state 17

    variable_declaration           shift and go to state 16

state 9

    (5) variable_declaration_part -> CONST . const_declaration SEMICOLON variable_declaration_part
    (9) const_declaration -> . ID EQUAL NUMBER
    (10) const_declaration -> . ID EQUAL STRING

    ID              shift and go to state 19

    const_declaration              shift and go to state 18

state 10

    (2) block -> variable_declaration_part procedure_declaration_part . statement_part
    (34) statement_part -> . compound_statement
    (35) compound_statement -> . BEGIN statement END DOT compound_statement2

    BEGIN           shift and go to state 22

    statement_part                 shift and go to state 20
    compound_statement             shift and go to state 21

state 11

    (19) procedure_declaration_part -> empty .

    BEGIN           reduce using rule 19 (procedure_declaration_part -> empty .)


state 12

    (20) procedure_declaration_part -> procedure_declaration .

    BEGIN           reduce using rule 20 (procedure_declaration_part -> procedure_declaration .)


state 13

    (21) procedure_declaration_part -> function_declaration .

    BEGIN           reduce using rule 21 (procedure_declaration_part -> function_declaration .)


state 14

    (22) procedure_declaration -> PROCEDURE . ID SEMICOLON block

    ID              shift and go to state 23


state 15

    (23) function_declaration -> FUNCTION . ID LPAREN variable_declaration RPAREN COLON type SEMICOLON variable_declaration_part

    ID              shift and go to state 24


state 16

    (4) variable_declaration_part -> VAR variable_declaration . SEMICOLON variable_declaration_part

    SEMICOLON       shift and go to state 25


state 17

    (6) variable_declaration -> ID . variable_declaration2 COLON type
    (7) variable_declaration2 -> . COMMA ID variable_declaration2
    (8) variable_declaration2 -> . empty
    (101) empty -> .

    COMMA           shift and go to state 27
    COLON           reduce using rule 101 (empty -> .)

    variable_declaration2          shift and go to state 26
    empty                          shift and go to state 28

state 18

    (5) variable_declaration_part -> CONST const_declaration . SEMICOLON variable_declaration_part

    SEMICOLON       shift and go to state 29


state 19

    (9) const_declaration -> ID . EQUAL NUMBER
    (10) const_declaration -> ID . EQUAL STRING

    EQUAL           shift and go to state 30


state 20

    (2) block -> variable_declaration_part procedure_declaration_part statement_part .

    $end            reduce using rule 2 (block -> variable_declaration_part procedure_declaration_part statement_part .)
    BEGIN           reduce using rule 2 (block -> variable_declaration_part procedure_declaration_part statement_part .)


state 21

    (34) statement_part -> compound_statement .

    $end            reduce using rule 34 (statement_part -> compound_statement .)
    BEGIN           reduce using rule 34 (statement_part -> compound_statement .)


state 22

    (35) compound_statement -> BEGIN . statement END DOT compound_statement2
    (38) statement -> . simple_statement
    (39) statement -> . statement simple_statement
    (40) statement -> . statement structured_statement
    (41) statement -> . structured_statement
    (44) simple_statement -> . assignment_statement
    (45) simple_statement -> . procedure_statement
    (46) simple_statement -> . read_statement
    (47) simple_statement -> . write_statement
    (48) simple_statement -> . call_function
    (61) structured_statement -> . compound_statement
    (62) structured_statement -> . if_statement
    (63) structured_statement -> . while_statement
    (49) assignment_statement -> . variable COLON EQUAL expression SEMICOLON
    (50) procedure_statement -> . procedure_identifier
    (52) read_statement -> . READ LPAREN input_variable input_variable2 RPAREN SEMICOLON
    (56) write_statement -> . WRITE LPAREN output_value output_value2 RPAREN SEMICOLON
    (24) call_function -> . ID LPAREN args RPAREN SEMICOLON
    (35) compound_statement -> . BEGIN statement END DOT compound_statement2
    (64) if_statement -> . IF LPAREN expression RPAREN THEN statement
    (65) if_statement -> . IF LPAREN expression RPAREN THEN statement ELSE statement
    (66) while_statement -> . WHILE expression DO statement
    (67) while_statement -> . WHILE expression DO BEGIN statement END SEMICOLON
    (95) variable -> . entire_variable
    (96) variable -> . indexed_variable
    (51) procedure_identifier -> . ID
    (99) entire_variable -> . variable_identifier
    (97) indexed_variable -> . array_variable LBRACKET expression RBRACKET
    (100) variable_identifier -> . ID
    (98) array_variable -> . entire_variable

    READ            shift and go to state 44
    WRITE           shift and go to state 45
    ID              shift and go to state 46
    BEGIN           shift and go to state 22
    IF              shift and go to state 47
    WHILE           shift and go to state 48

    statement                      shift and go to state 31
    simple_statement               shift and go to state 32
    structured_statement           shift and go to state 33
    assignment_statement           shift and go to state 34
    procedure_statement            shift and go to state 35
    read_statement                 shift and go to state 36
    write_statement                shift and go to state 37
    call_function                  shift and go to state 38
    compound_statement             shift and go to state 39
    if_statement                   shift and go to state 40
    while_statement                shift and go to state 41
    variable                       shift and go to state 42
    procedure_identifier           shift and go to state 43
    entire_variable                shift and go to state 49
    indexed_variable               shift and go to state 50
    variable_identifier            shift and go to state 51
    array_variable                 shift and go to state 52

state 23

    (22) procedure_declaration -> PROCEDURE ID . SEMICOLON block

    SEMICOLON       shift and go to state 53


state 24

    (23) function_declaration -> FUNCTION ID . LPAREN variable_declaration RPAREN COLON type SEMICOLON variable_declaration_part

    LPAREN          shift and go to state 54


state 25

    (4) variable_declaration_part -> VAR variable_declaration SEMICOLON . variable_declaration_part
    (3) variable_declaration_part -> . empty
    (4) variable_declaration_part -> . VAR variable_declaration SEMICOLON variable_declaration_part
    (5) variable_declaration_part -> . CONST const_declaration SEMICOLON variable_declaration_part
    (101) empty -> .

    VAR             shift and go to state 8
    CONST           shift and go to state 9
    PROCEDURE       reduce using rule 101 (empty -> .)
    FUNCTION        reduce using rule 101 (empty -> .)
    BEGIN           reduce using rule 101 (empty -> .)

    variable_declaration_part      shift and go to state 55
    empty                          shift and go to state 7

state 26

    (6) variable_declaration -> ID variable_declaration2 . COLON type

    COLON           shift and go to state 56


state 27

    (7) variable_declaration2 -> COMMA . ID variable_declaration2

    ID              shift and go to state 57


state 28

    (8) variable_declaration2 -> empty .

    COLON           reduce using rule 8 (variable_declaration2 -> empty .)


state 29

    (5) variable_declaration_part -> CONST const_declaration SEMICOLON . variable_declaration_part
    (3) variable_declaration_part -> . empty
    (4) variable_declaration_part -> . VAR variable_declaration SEMICOLON variable_declaration_part
    (5) variable_declaration_part -> . CONST const_declaration SEMICOLON variable_declaration_part
    (101) empty -> .

    VAR             shift and go to state 8
    CONST           shift and go to state 9
    PROCEDURE       reduce using rule 101 (empty -> .)
    FUNCTION        reduce using rule 101 (empty -> .)
    BEGIN           reduce using rule 101 (empty -> .)

    variable_declaration_part      shift and go to state 58
    empty                          shift and go to state 7

state 30

    (9) const_declaration -> ID EQUAL . NUMBER
    (10) const_declaration -> ID EQUAL . STRING

    NUMBER          shift and go to state 59
    STRING          shift and go to state 60


state 31

    (35) compound_statement -> BEGIN statement . END DOT compound_statement2
    (39) statement -> statement . simple_statement
    (40) statement -> statement . structured_statement
    (44) simple_statement -> . assignment_statement
    (45) simple_statement -> . procedure_statement
    (46) simple_statement -> . read_statement
    (47) simple_statement -> . write_statement
    (48) simple_statement -> . call_function
    (61) structured_statement -> . compound_statement
    (62) structured_statement -> . if_statement
    (63) structured_statement -> . while_statement
    (49) assignment_statement -> . variable COLON EQUAL expression SEMICOLON
    (50) procedure_statement -> . procedure_identifier
    (52) read_statement -> . READ LPAREN input_variable input_variable2 RPAREN SEMICOLON
    (56) write_statement -> . WRITE LPAREN output_value output_value2 RPAREN SEMICOLON
    (24) call_function -> . ID LPAREN args RPAREN SEMICOLON
    (35) compound_statement -> . BEGIN statement END DOT compound_statement2
    (64) if_statement -> . IF LPAREN expression RPAREN THEN statement
    (65) if_statement -> . IF LPAREN expression RPAREN THEN statement ELSE statement
    (66) while_statement -> . WHILE expression DO statement
    (67) while_statement -> . WHILE expression DO BEGIN statement END SEMICOLON
    (95) variable -> . entire_variable
    (96) variable -> . indexed_variable
    (51) procedure_identifier -> . ID
    (99) entire_variable -> . variable_identifier
    (97) indexed_variable -> . array_variable LBRACKET expression RBRACKET
    (100) variable_identifier -> . ID
    (98) array_variable -> . entire_variable

    END             shift and go to state 61
    READ            shift and go to state 44
    WRITE           shift and go to state 45
    ID              shift and go to state 46
    BEGIN           shift and go to state 22
    IF              shift and go to state 47
    WHILE           shift and go to state 48

    simple_statement               shift and go to state 62
    structured_statement           shift and go to state 63
    assignment_statement           shift and go to state 34
    procedure_statement            shift and go to state 35
    read_statement                 shift and go to state 36
    write_statement                shift and go to state 37
    call_function                  shift and go to state 38
    compound_statement             shift and go to state 39
    if_statement                   shift and go to state 40
    while_statement                shift and go to state 41
    variable                       shift and go to state 42
    procedure_identifier           shift and go to state 43
    entire_variable                shift and go to state 49
    indexed_variable               shift and go to state 50
    variable_identifier            shift and go to state 51
    array_variable                 shift and go to state 52

state 32

    (38) statement -> simple_statement .

    END             reduce using rule 38 (statement -> simple_statement .)
    READ            reduce using rule 38 (statement -> simple_statement .)
    WRITE           reduce using rule 38 (statement -> simple_statement .)
    ID              reduce using rule 38 (statement -> simple_statement .)
    BEGIN           reduce using rule 38 (statement -> simple_statement .)
    IF              reduce using rule 38 (statement -> simple_statement .)
    WHILE           reduce using rule 38 (statement -> simple_statement .)
    ELSE            reduce using rule 38 (statement -> simple_statement .)


state 33

    (41) statement -> structured_statement .

    END             reduce using rule 41 (statement -> structured_statement .)
    READ            reduce using rule 41 (statement -> structured_statement .)
    WRITE           reduce using rule 41 (statement -> structured_statement .)
    ID              reduce using rule 41 (statement -> structured_statement .)
    BEGIN           reduce using rule 41 (statement -> structured_statement .)
    IF              reduce using rule 41 (statement -> structured_statement .)
    WHILE           reduce using rule 41 (statement -> structured_statement .)
    ELSE            reduce using rule 41 (statement -> structured_statement .)


state 34

    (44) simple_statement -> assignment_statement .

    END             reduce using rule 44 (simple_statement -> assignment_statement .)
    READ            reduce using rule 44 (simple_statement -> assignment_statement .)
    WRITE           reduce using rule 44 (simple_statement -> assignment_statement .)
    ID              reduce using rule 44 (simple_statement -> assignment_statement .)
    BEGIN           reduce using rule 44 (simple_statement -> assignment_statement .)
    IF              reduce using rule 44 (simple_statement -> assignment_statement .)
    WHILE           reduce using rule 44 (simple_statement -> assignment_statement .)
    ELSE            reduce using rule 44 (simple_statement -> assignment_statement .)


state 35

    (45) simple_statement -> procedure_statement .

    END             reduce using rule 45 (simple_statement -> procedure_statement .)
    READ            reduce using rule 45 (simple_statement -> procedure_statement .)
    WRITE           reduce using rule 45 (simple_statement -> procedure_statement .)
    ID              reduce using rule 45 (simple_statement -> procedure_statement .)
    BEGIN           reduce using rule 45 (simple_statement -> procedure_statement .)
    IF              reduce using rule 45 (simple_statement -> procedure_statement .)
    WHILE           reduce using rule 45 (simple_statement -> procedure_statement .)
    ELSE            reduce using rule 45 (simple_statement -> procedure_statement .)


state 36

    (46) simple_statement -> read_statement .

    END             reduce using rule 46 (simple_statement -> read_statement .)
    READ            reduce using rule 46 (simple_statement -> read_statement .)
    WRITE           reduce using rule 46 (simple_statement -> read_statement .)
    ID              reduce using rule 46 (simple_statement -> read_statement .)
    BEGIN           reduce using rule 46 (simple_statement -> read_statement .)
    IF              reduce using rule 46 (simple_statement -> read_statement .)
    WHILE           reduce using rule 46 (simple_statement -> read_statement .)
    ELSE            reduce using rule 46 (simple_statement -> read_statement .)


state 37

    (47) simple_statement -> write_statement .

    END             reduce using rule 47 (simple_statement -> write_statement .)
    READ            reduce using rule 47 (simple_statement -> write_statement .)
    WRITE           reduce using rule 47 (simple_statement -> write_statement .)
    ID              reduce using rule 47 (simple_statement -> write_statement .)
    BEGIN           reduce using rule 47 (simple_statement -> write_statement .)
    IF              reduce using rule 47 (simple_statement -> write_statement .)
    WHILE           reduce using rule 47 (simple_statement -> write_statement .)
    ELSE            reduce using rule 47 (simple_statement -> write_statement .)


state 38

    (48) simple_statement -> call_function .

    END             reduce using rule 48 (simple_statement -> call_function .)
    READ            reduce using rule 48 (simple_statement -> call_function .)
    WRITE           reduce using rule 48 (simple_statement -> call_function .)
    ID              reduce using rule 48 (simple_statement -> call_function .)
    BEGIN           reduce using rule 48 (simple_statement -> call_function .)
    IF              reduce using rule 48 (simple_statement -> call_function .)
    WHILE           reduce using rule 48 (simple_statement -> call_function .)
    ELSE            reduce using rule 48 (simple_statement -> call_function .)


state 39

    (61) structured_statement -> compound_statement .

    END             reduce using rule 61 (structured_statement -> compound_statement .)
    READ            reduce using rule 61 (structured_statement -> compound_statement .)
    WRITE           reduce using rule 61 (structured_statement -> compound_statement .)
    ID              reduce using rule 61 (structured_statement -> compound_statement .)
    BEGIN           reduce using rule 61 (structured_statement -> compound_statement .)
    IF              reduce using rule 61 (structured_statement -> compound_statement .)
    WHILE           reduce using rule 61 (structured_statement -> compound_statement .)
    ELSE            reduce using rule 61 (structured_statement -> compound_statement .)


state 40

    (62) structured_statement -> if_statement .
